[gd_scene load_steps=6 format=1]

[ext_resource path="res://nodes/rooms/room.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/warp_tile.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/warp_arrival.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/bullet_switch.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/switch_controller_double_jump_collect_room_8.gd" type="Script" id=5]

[node name="room" instance=ExtResource( 1 )]

[node name="terrain" parent="."]

tile_data = IntArray( 0, 6, 1, 6, 2, 6, 3, 6, 4, 6, 5, 6, 6, 6, 7, 6, 8, 6, 9, 6, 10, 6, 11, 6, 12, 6, 13, 6, 14, 6, 15, 6, 16, 6, 17, 6, 18, 6, 19, 6, 65536, 6, 65537, 6, 65538, 6, 65539, 6, 65540, 6, 65541, 6, 65542, 6, 65543, 6, 65544, 6, 65545, 6, 65555, 6, 131072, 6, 131073, 6, 131074, 6, 131077, 6, 131078, 6, 131079, 6, 131080, 6, 131081, 6, 196608, 6, 196609, 6, 196614, 6, 196615, 6, 196616, 6, 196617, 6, 196627, 6, 262144, 6, 262151, 6, 262152, 6, 262153, 6, 262160, 6, 262163, 6, 327680, 6, 327687, 6, 327688, 6, 327689, 6, 327699, 6, 393216, 6, 393219, 6, 393220, 6, 393223, 6, 393224, 6, 393225, 6, 393230, 6, 393235, 6, 458755, 6, 458756, 6, 458759, 6, 458760, 6, 458761, 6, 458771, 6, 524291, 6, 524292, 6, 524307, 6, 589824, 6, 589825, 6, 589826, 6, 589827, 6, 589828, 6, 589829, 6, 589830, 6, 589831, 6, 589832, 6, 589833, 6, 589834, 6, 589835, 6, 589836, 6, 589837, 6, 589838, 6, 589839, 6, 589840, 6, 589841, 6, 589842, 6, 589843, 6, 655360, 6, 655361, 6, 655362, 6, 655363, 6, 655364, 6, 655365, 6, 655366, 6, 655367, 6, 655368, 6, 655369, 6, 655370, 6, 655371, 6, 655372, 6, 655373, 6, 655374, 6, 655375, 6, 655376, 6, 655377, 6, 655378, 6, 655379, 6 )

[node name="test_player_spawn_point" parent="."]

transform/pos = Vector2( 96, 544 )

[node name="double_jump_collect_room_7_door" parent="." instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 32, 512 )
arrival_node_ID = "double_jump_collect_room_8_arrival"
destination_scene_path = "res://nodes/rooms/double_jump_collect_room_7.tscn"

[node name="sprite" parent="double_jump_collect_room_7_door"]

modulate = Color( 0.146599, 0.984375, 0.0269165, 1 )

[node name="double_jump_collect_room_7_arrival" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 96, 544 )

[node name="bullet_switch" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 1248, 160 )
transform/rot = 180.0

[node name="switch_controller" type="Node2D" parent="."]

script/script = ExtResource( 5 )

[connection signal="player_enter" from="." to="switch_controller" method="_on_room_player_enter"]

[connection signal="switch_off" from="bullet_switch" to="switch_controller" method="_on_bullet_switch_switch_off"]

[connection signal="switch_on" from="bullet_switch" to="switch_controller" method="_on_bullet_switch_switch_on"]


[editable path="double_jump_collect_room_7_door"]
